--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body{
     font-family: 'Roboto', sans-serif;
     background-size: cover;
     background-position: top center;
+    background-image: url('./background.jpeg');
 }
 
 .app-wrap {
@@ -17,9 +18,6 @@ body{
     flex-direction: column;
     min-height: 100vh;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.1)),
-                url('./065caea3e2faf0cbe430bd233ef5d480.jpg');
-    background-size: cover;
-    align-items: center;
 }
 
 header{
